[project]
name = "coral8"
version = "0.0.4"
description = "A zero-config CLI tool to bridge files and inject Python code."
authors = [{ name = "Dylan Kennedy", email = "dylkenn89@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
keywords = ["cli", "csv", "json", "code injection", "typer"]
requires-python = ">=3.10"

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Utilities"
]

[project.scripts]
coral8 = "coral8.cli:app"

[tool.setuptools]
packages = ["coral8"]

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"
